# rustpress-plugin-cloudflare

./: .gitignore  BACKEND_API_PLAN.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  package-lock.json  plugin.toml
.ai/: context_base.md
.github/workflows/: release.yml
admin-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
admin-ui/src/: App.tsx  index.css  vite-env.d.ts
admin-ui/src/components/: ConnectionRequired.tsx  QuickActions.tsx  Skeleton.tsx  StatsCard.tsx  TrafficChart.tsx
admin-ui/src/components/ui/: index.tsx
admin-ui/src/layouts/: CloudflareLayout.tsx
admin-ui/src/lib/: api.ts  mockApi.ts  mockData.ts
admin-ui/src/pages/: AnalyticsPage.tsx  CachePage.tsx  D1Page.tsx  DashboardPage.tsx  DnsPage.tsx  PerformancePage.tsx  R2Page.tsx  RulesPage.tsx  SecurityPage.tsx  SettingsPage.tsx  SslPage.tsx  StreamPage.tsx  WorkersPage.tsx
admin-ui/src/stores/: cloudflareStore.ts
migrations/: 1.0.0_initial_schema.sql
src/: client.rs  config.rs  error.rs  lib.rs
src/api/: analytics.rs  cache.rs  d1.rs  dns.rs  mod.rs  oauth.rs  r2.rs  rules.rs  security.rs  settings.rs  ssl.rs  stream.rs  workers.rs
src/hooks/: mod.rs
src/middleware/: mod.rs
src/models/: mod.rs
src/services/: analytics.rs  cache.rs  d1.rs  dns.rs  mod.rs  oauth.rs  r2.rs  security.rs  settings.rs  sso_handoff.rs  stream.rs  workers.rs
src/workers/: mod.rs
